<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/pub_text_color_primary_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.members.search.SearchFragment">

    <androidx.appcompat.widget.Toolbar
            android:background="@color/colorAccent"
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_margin="@dimen/module_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                        android:id="@+id/chip_sort_name"
                        android:background="@color/background"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name"/>

                <com.google.android.material.chip.Chip
                        android:id="@+id/chip_sort_email"
                        android:background="@color/background"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="email"/>

                <com.google.android.material.chip.Chip
                        android:id="@+id/chip_sort_location"
                        android:background="@color/background"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="location"/>


            </com.google.android.material.chip.ChipGroup>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_error"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Search name">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_search_user_name"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_search"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
                android:padding="8dp"
                android:textColor="@color/white"
                android:text="Search result"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_sort_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:weightSum="1"
            android:id="@+id/container_search_post"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
                android:padding="8dp"
                android:textColor="@color/white"
                android:text="Post search result"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_search_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>