<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/root_home"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity">

    <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_container_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">


            <FrameLayout
                    android:id="@+id/screen_home"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="56dp"
                    android:layout_height="match_parent"/>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottom_nave_home"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="bottom"
                    style="@style/bottom_navigation"
                    app:itemTextColor="@color/white"
                    app:menu="@menu/menu_bottom_nav_home"/>

        </FrameLayout>

        <com.google.android.material.navigation.NavigationView
                app:headerLayout="@layout/layout_home_side_nav_header"
                android:id="@+id/side_drawer_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:menu="@menu/menu_side_nav"/>

    </androidx.drawerlayout.widget.DrawerLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>