...
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginTop="@dimen/module_1"
                    android:id="@+id/text_search_user_name"
                    tools:text="User Name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

...
