<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container_search_post"
        android:layout_margin="@dimen/module_1"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="@dimen/default_card_radius"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
                android:id="@+id/container_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginStart="@dimen/module_1"
                    android:layout_marginTop="@dimen/module_2"
                    android:layout_width="64dp"
                    android:id="@+id/image_post_publisher_avatar"
                    android:layout_height="64dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:paddingTop="@dimen/module_1"
                    android:paddingEnd="@dimen/module_2"
                    android:paddingBottom="@dimen/module_1"
                    android:layout_marginStart="86dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_marginTop="4dp"
                        android:id="@+id/text_user_name"
                        tools:text="User Name"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_post_location"
                        tools:text="Location"
                        android:textSize="12sp"
                        android:maxLines="2"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_post_date"
                        tools:text="date"
                        android:maxLines="1"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </FrameLayout>


        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_post_preview"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:maxHeight="360dp"
                android:src="@mipmap/ic_launcher"
        />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="16dp"
                android:id="@+id/text_post_caption"
                tools:text="Location"
                android:padding="@dimen/module_1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/container_post_actions"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_like"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:icon="@drawable/ic_like"
                    android:text="like"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_comments"
                    android:layout_marginStart="8dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:icon="@drawable/ic_comment"
                    android:text="Comments"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</com.google.android.material.card.MaterialCardView>