...
                android:layout_weight="1"
                android:id="@+id/list_fav_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <FrameLayout
                android:id="@+id/container_multiselect"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="55dp">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_multi_delete"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center"
                    android:text="delete selected"
                    app:icon="@drawable/ic_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
...
