...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:clickable="true"
            android:padding="@dimen/module_1"
            android:id="@+id/container_like_post"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
                android:layout_width="match_parent"
...
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_published_post_date"
                        tools:text="date"
                        android:paddingEnd="@dimen/module_1"
                        android:textColor="@color/pub_text_color_primary"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
...
